# bme68x-zephyr

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  bme68x.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/bme68x-sensor-api/: CMakeLists.txt  Kconfig  README.md
drivers/bme68x-sensor-api/boards/: nrf52840dk_nrf52840.overlay
drivers/bme68x-sensor-api/include/drivers/: bme68x_sensor_api.h
drivers/bme68x-sensor-api/src/: bme68x_drv.c  bme68x_drv.h  bme68x_drv_i2c.c  bme68x_drv_spi.c
dts/bindings/: bosch,bme68x-sensor-api-i2c.yaml  bosch,bme68x-sensor-api-spi.yaml
lib/: CMakeLists.txt  Kconfig
lib/bme68x-esp/: CMakeLists.txt  Kconfig  README.md
lib/bme68x-esp/conf/: bt_peripheral.conf  bt_smp.conf  es_notifications.conf  es_peripheral.conf  ess_notifications.conf
lib/bme68x-esp/include/: bme68x_esp_gap.h  bme68x_esp_sensor.h  bme68x_ess.h
lib/bme68x-esp/src/: bme68x_esp_gap.c  bme68x_esp_sensor.c  bme68x_ess.c
lib/bme68x-iaq/: CMakeLists.txt  Kconfig  README.md
lib/bme68x-iaq/boards/: nrf52840dk_nrf52840-nvs.conf  nrf52840dk_nrf52840-settings.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
lib/bme68x-iaq/config/: README.md
lib/bme68x-iaq/config/bme680/bme680_iaq_18v_300s_28d/: bsec_iaq.c
lib/bme68x-iaq/config/bme680/bme680_iaq_18v_300s_4d/: bsec_iaq.c
lib/bme68x-iaq/config/bme680/bme680_iaq_18v_3s_28d/: bsec_iaq.c
lib/bme68x-iaq/config/bme680/bme680_iaq_18v_3s_4d/: bsec_iaq.c  bsec_iaq.h
lib/bme68x-iaq/config/bme680/bme680_iaq_33v_300s_28d/: bsec_iaq.c  bsec_iaq.h
lib/bme68x-iaq/config/bme680/bme680_iaq_33v_300s_4d/: bsec_iaq.c
lib/bme68x-iaq/config/bme680/bme680_iaq_33v_3s_28d/: bsec_iaq.c
lib/bme68x-iaq/config/bme680/bme680_iaq_33v_3s_4d/: bsec_iaq.c
lib/bme68x-iaq/include/: bme68x_iaq.h  bme68x_iaq_nvs.h  bme68x_iaq_settings.h
lib/bme68x-iaq/src/: bme68x_iaq.c  bme68x_iaq_nvs.c  bme68x_iaq_settings.c
lib/bme68x-sensor-api/: CMakeLists.txt  Kconfig  README.md
lib/bme68x-sensor-api/include/: bme68x_defs.h
lib/bsec/: CMakeLists.txt  Kconfig  README.md
lib/bsec/include/: NOTICE  bsec_datatypes.h
samples/bme68x-esp/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/bme68x-esp/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
samples/bme68x-esp/src/: main.c
samples/bme68x-iaq/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/bme68x-iaq/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
samples/bme68x-iaq/src/: main.c
samples/bme68x-tphg/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/bme68x-tphg/boards/: nrf52840dk_nrf52840.overlay
samples/bme68x-tphg/src/: bme68x_tphg.c  bme68x_tphg.h  main.c
scripts/zbme68x/: __init__.py  bsec2_algo_blobs.py  bsec2_iaq_configs.py  logging.conf  update_bsec2.py
zephyr/: module.yml
